--- a/vr.html
+++ b/vr.html
@@ -21,13 +21,13 @@
 
 		<script src="/three.js"></script>
 
-		<script src="/WebVR.js"></script>
-		<script src="/effects/VREffect.js"></script>
-		<script src="/VRControls.js"></script>
-		<script src="/ViveController.js"></script>
+		<script src="./WebVR.js"></script>
+		<script src="./VREffect.js"></script>
+		<script src="./VRControls.js"></script>
+		<script src="./ViveController.js"></script>
 
-		<script src="/OBJLoader.js"></script>
-		<script src="/STLLoader.js"></script>
+		<script src="./OBJLoader.js"></script>
+		<script src="./STLLoader.js"></script>
 
 		<script>
 
@@ -133,7 +133,7 @@
 
 
 				for (i=0; i<14; i++) {
-					loader.load ('/stl/UPPER.stl-' + i + '.stl');
+					loader.load ('./stl/UPPER.stl-' + i + '.stl');
 				};
 
 				//////// old code
