--- a/vr.html
+++ b/vr.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 
-		<script src="/three.js"></script>
+		<script src="./three.js"></script>
 
 		<script src="./WebVR.js"></script>
 		<script src="./VREffect.js"></script>
