--- a/vr.html
+++ b/vr.html
@@ -107,9 +107,34 @@
 				//];
 
 				var loader = new THREE.STLLoader ();
-				loader.addEventListener ( 'load', function (event) {
-					var geometry = event.content;
-					var material = new THREE.MeshStandardMaterial( {color: Math.random() * 0xffffff,roughness: 0.7, metalness: 0.0 })
+				//loader.addEventListener ( 'load', function (event) {
+				//	var geometry = event.content;
+				//	var material = new THREE.MeshStandardMaterial( {color: Math.random() * 0xffffff,roughness: 0.7, metalness: 0.0 });
+
+				//	var object = new THREE.Mesh( geometry, material );
+//
+//					object.position.x = 0;
+				//	object.position.y = 0;
+				//	object.position.z = 0;
+
+				//	object.rotation.x = 0;
+				//	object.rotation.y = 0;
+				//	object.rotation.z = 0;
+
+				//	object.scale.setScalar( 1 );
+
+				//	object.castShadow = true;
+				///	object.receiveShadow = true;
+//
+//					group.add( object );
+					//objects.push (object);
+
+				//});
+
+
+				for (i=0; i<14; i++) {
+					loader.load ('./stl/UPPER.stl-' + i + '.stl', function (geometry) {
+					var material = new THREE.MeshStandardMaterial( {color: Math.random() * 0xffffff,roughness: 0.7, metalness: 0.0 });
 
 					var object = new THREE.Mesh( geometry, material );
 
@@ -127,13 +152,7 @@
 					object.receiveShadow = true;
 
 					group.add( object );
-					//objects.push (object);
-
-				});
-
-
-				for (i=0; i<14; i++) {
-					loader.load ('./stl/UPPER.stl-' + i + '.stl');
+					});
 				};
 
 				//////// old code
@@ -194,11 +213,11 @@
 				scene.add( controller2 );
 
 				var loader = new THREE.OBJLoader();
-				loader.setPath( 'models/obj/vive-controller/' );
+				loader.setPath( './vive/' );
 				loader.load( 'vr_controller_vive_1_5.obj', function ( object ) {
 
 					var loader = new THREE.TextureLoader();
-					loader.setPath( 'models/obj/vive-controller/' );
+					loader.setPath( './vive/' );
 
 					var controller = object.children[ 0 ];
 					controller.material.map = loader.load( 'onepointfive_texture.png' );
